--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,10 @@
 mono_crash.*
 
 # Build results
-[Dd]ebug/
+**/[Bb]in/*
+!**/[Dd]ebug
+**/[Dd]ebug/*
+!**/Debug/dll/
 [Dd]ebugPublic/
 [Rr]elease/
 [Rr]eleases/
@@ -33,7 +36,7 @@ bld/
 [Oo]bj/
 [Ll]og/
 [Ll]ogs/
-##!**Debug/dll
+##!/Debug/dll/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
@@ -400,3 +403,6 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+
+
