--- a/.gitignore
+++ b/.gitignore
@@ -19,15 +19,18 @@
 mono_crash.*
 
 # Build results
-**/[Bb]in/*
+##**/[Bb]in/*
 !**/[Dd]ebug
 **/[Dd]ebug/*
-!**/Debug/dll/
+!**/Debug/dll
+**/Debug/dll/*
+!**/Debug/dll/x64/
+!**/Debug/dll/x86/
 [Dd]ebugPublic/
 [Rr]elease/
 [Rr]eleases/
-x64/
-x86/
+##/x64/
+##/x86/
 [Ww][Ii][Nn]32/
 [Aa][Rr][Mm]/
 [Aa][Rr][Mm]64/
