--- a/WpfApp1/packages.config
+++ b/WpfApp1/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="LiveCharts" version="0.9.7" targetFramework="net472" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net472" />
+  <package id="LiveCharts.Wpf.NetCore3" version="0.9.8" targetFramework="net472" />
   <package id="OpenCvSharp4" version="4.9.0.20240103" targetFramework="net472" />
   <package id="OpenCvSharp4.Extensions" version="4.9.0.20240103" targetFramework="net472" />
   <package id="OpenCvSharp4.runtime.win" version="4.9.0.20240103" targetFramework="net472" />
